# STUDY_A4_Projet_2_MGL7460

./: .gitignore  README.md  uptime_file
cpp/: CMakeLists.txt  README.md
cpp/include/: uptime.hpp
cpp/src/: main.cpp  uptime.cpp
cpp/test/: testMain.cpp  uptimeTest.cpp
ruby/: README.md  Rakefile
ruby/src/: main.rb  uptime.rb
ruby/test/: uptimeTest.rb
